@@ -1,5 +1,8 @@
 2004-07-11  Harri Porten  <porten@kde.org>
 
+	* kpppwidget.cpp: to save some screen space: show the modem combo
+	box only if more than one modem has been set up.
+
 	* general.cpp (ModemWidget): fixed name label of modem dialog
 
 2004-05-28  Harri Porten  <porten@kde.org>
